# Aethon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
OLD_VERSION/utils/: sonar.py
backend/: backend.md  backend.py  pyproject.toml
backend/src/: __init__.py  app.py  sonar_client.py
backend/src/utils/: __init__.py  image_processing.py  web_scraper.py
backend/tests/: __init__.py  test_api.py  test_sonar_client.py
backend/utils/: sonar.py
docs/: API_reference.md  System_Architecture.md
frontend/: detector.js  frontend.md
frontend/aethon/: package-lock.json  package.json
frontend/aethon/app/: config.ts  globals.css  layout.tsx  page.tsx
frontend/aethon/app/upload/: route.ts
frontend/aethon/app/verify/: page.tsx
frontend/aethon/app/verify/analyse/: page.tsx
py/: backend.py  conn-sonar.py
